data/derived/comb/progs/unify/prog0407.ml.out
Characters 31-46:
  let _ = stringOfList (fun x -> string_of_int x+1) [1;2;3;4];;
                                 ^^^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         int
